# apelle

./: .dockerignore  .env.local  .gitignore  Apelle.toml  Cargo.toml  README.md  TODO.md  build.gradle  compose.override.yml  compose.prod.yml  compose.yml  gradle.properties  settings.gradle
.github/workflows/: quarkus.yml
api-docs/: .env.local  Cargo.toml  compose.yml
api-docs/src/: config.rs  lib.rs  main.rs
bruno/: bruno.json  collection.bru
bruno/Queues/: folder.bru
bruno/Queues/Add song and start/: Create.bru  Enqueue.bru  Next.bru  folder.bru
bruno/Queues/Basic flow/: Get.bru  folder.bru
bruno/Queues/Check conditionals/: Create.bru  Delete.bru  Get.bru  Return Not Modified with etag.bru  folder.bru
bruno/Queues/Create and delete/: Delete.bru  Fail delete.bru  folder.bru
bruno/Users/: Default admin exist.bru  Default alternate user exists.bru  Default user exist.bru  folder.bru
bruno/Users/Create and delete/: Create.bru  Delete.bru  Get me.bru  folder.bru
bruno/environments/: Development.bru
cache-pubsub/: README.md  compose.yml
common/: Cargo.toml  README.md
common/src/: auth.rs  cache_pubsub.rs  cli.rs  common_errors.rs  db.rs  error_reporter.rs  id_or_rep.rs  iso8601.rs  lib.rs  logging.rs  main_wrapper.rs  not_modified.rs  paginated.rs  search.rs  serve.rs  services_client.rs  tracing_client.rs
common/src/iso8601/: duration.rs  opt_duration.rs
common/src/logging/: or_bool.rs
common/src/main_wrapper/: service_endpoint.rs
configs/: .env.local  Cargo.toml  compose.yml
configs/dtos/: Cargo.toml
configs/dtos/src/: actions.rs  lib.rs  queue_user_role.rs
configs/migrations/base/: V1.3.0__configs.sql
configs/migrations/dev/: V1.3.1__default_config.sql
configs/src/: config_processing.rs  create.rs  delete.rs  get.rs  lib.rs  main.rs
db/: .env.local  README.md  compose.yml  flyway.prod.toml  flyway.toml
docker/: Apelle.docker.dev.toml  Apelle.docker.release.toml  Apelle.docker.toml  Dockerfile.rust  Dockerfile.sv  README.md  docker-compose.yml
gateway/: README.md  compose.yml  nginx.conf
gateway/nginx/: nginx.conf
gateway/nginx/inbound/: locations.conf  service.conf  upstreams.conf
gateway/nginx/outbound/: locations.conf
logs/apelle_users/: apelle_users.log.2025-05-30
queues/: .env.local  Cargo.toml  compose.yml
queues/events/: .env.local  Cargo.toml  compose.yml
queues/events/src/: config.rs  events.rs  handler.rs  lib.rs  main.rs
queues/events/src/events/: builder.rs  collector.rs  publisher.rs  subscriber.rs
queues/migrations/base/: V1.4.0__queues.sql
queues/src/: config.rs  create.rs  dtos.rs  enqueue.rs  events.rs  get.rs  lib.rs  like.rs  main.rs  model.rs
queues/src/handlers/: create.rs  delete.rs  enqueue.rs  events.rs  get.rs  like.rs  next.rs  push_sync_event.rs
queues/src/middleware/: config.rs  etag.rs  queue_config.rs  user.rs
songs/: .env.local  Cargo.toml  README.md  compose.yml
songs/dtos/: Cargo.toml
songs/dtos/src/: lib.rs  provider.rs  public.rs  queue.rs  source.rs
songs/migrations/base/: V1.0.2__songs.sql  V1.1.0__songs.sql
songs/providers/: README.md
songs/providers/youtube/: .env.local  Cargo.toml  README.md  compose.yml
songs/providers/youtube/migrations/base/: V1.0.3__youtube_songs.sql  V1.2.0__youtube_songs.sql
songs/providers/youtube/src/: config.rs  lib.rs  main.rs  provider.rs
songs/providers/youtube/src/provider/: delete.rs  dtos.rs  get.rs  insert.rs  resolve.rs  search.rs
songs/providers/youtube/src/provider/dtos/: youtube.rs
songs/providers/youtube/src/provider/search/: cursor.rs
songs/src/: config.rs  lib.rs  main.rs  providers.rs  resolve.rs  search.rs  seen_sources.rs  solved.rs  sources.rs
songs/src/search/: cursor.rs
src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
src/main/resources/: application-dev.yml  application-prod.yml  application-staging.yml  application-test.yml  application.properties  application.yml  banner.txt
src/main/resources/db/migration/: V1.0.0__apelle.sql  V1.0.1__player_state_id.sql  V1.0.2__create_config_tables.sql  V1.0.3__lkes_ref_column.sql
src/main/webui/: README.md  orval.config.ts  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
src/main/webui/openapi/: .gitignore  apelle.json  apelle.yaml
src/main/webui/src/: app.css  app.d.ts  app.html
src/main/webui/src/lib/: auth.svelte.ts  errors.svelte.ts  logger.ts  matchers.ts  time.ts  utils.ts
src/main/webui/src/lib/apis/: apelle.ts
src/main/webui/src/lib/authenticate/: signin.ts  signup.ts
src/main/webui/src/lib/clients/: apelle.ts
src/main/webui/src/lib/config/: defaults.ts  dev.ts  index.ts  prod.ts  staging.ts
src/main/webui/src/lib/i18n/: en.json  index.ts  it.json
src/main/webui/src/lib/models/: Queue.svelte.ts  QueueUserQueryWithRoleDto.ts
src/main/webui/src/params/: uuid.ts
src/main/webui/src/routes/: +layout.svelte  +layout.ts
src/main/webui/src/routes/(authed)/: +layout.svelte  +layout.ts  +page.svelte
users/: Cargo.toml  README.md  compose.yml
users/migrations/base/: V1.0.0__users.sql
users/migrations/dev/: V1.0.1__default_global_roles.sql  V1.0.1__users.sql  V1.0.2__test_users.sql
users/migrations/prod/: V1.0.1__users.sql
users/src/: auth.rs  config.rs  create.rs  dtos.rs  lib.rs  main.rs  me.rs
users/src/auth/: origins_headers.rs
web-ui/: compose.yml  nginx.conf  orval.config.ts  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
web-ui/src/: app.css  app.d.ts  app.html
web-ui/src/lib/: auth.svelte.ts  errors.svelte.ts  errors.ts  logger.ts
web-ui/src/lib/apis/: apelle.ts
web-ui/src/lib/components/: Snackbar.svelte
web-ui/src/lib/components/forms/: TextInput.svelte
web-ui/src/lib/config/: defaults.ts  dev.ts  index.ts
web-ui/src/lib/i18n/: en.json  index.ts  it.json
web-ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web-ui/src/routes/(authed)/: +layout.ts  +page.svelte
web-ui/src/routes/auth/: +layout.ts  +page.svelte  Form.svelte
(+224 files in other folders)
