[workspace]
resolver = "3"
members = ["common", "users", "songs", "songs/dtos", "songs/providers/*"]

[workspace.package]
license = "MIT"

[workspace.dependencies]
# Members
apelle-common = { path = "common" }
apelle-songs-dtos = { path = "songs/dtos" }

# Networking
axum = { version = "0.8.4", features = ["tokio", "http1", "macros", "tracing"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal", "sync"] }

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }

# Caching and pubsub
redis = { version = "0.31.0", default-features = false, features = [
    "aio",
    "json",
    "keep-alive",
    "tokio-comp",
    "uuid",
    "connection-manager",
] }

# Authentication
argon2 = { version = "0.5.3", features = ["std"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
serde_json = "1.0.140"

# Logging and error reporting
snafu = "0.8.6"
tracing = "0.1.41"
tracing-futures = { version = "0.2.5", features = ["tokio"] }


# Misc utils
uuid = { version = "1.17.0", features = ["serde", "v4"] }
url = { version = "2.5.4", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = { version = "0.3.31", default-features = false }
textwrap-macros = "0.3.0"


[workspace.dependencies.reqwest]
version = "0.12.18"
features = ["json"]
# Reqwest uses tls by default, that we do not have 
# inside the containers
default-features = false
