[workspace]
resolver = "3"
members = [
    "common",
    "users",
    "songs",
    "songs/dtos",
    "songs/providers/*",
    "queues",
    "configs",
    "configs/dtos",
    "swagger",
]

[workspace.package]
license = "MIT"

[workspace.dependencies]
# Members
apelle-common = { path = "common" }
apelle-songs-dtos = { path = "songs/dtos" }
apelle-configs-dtos = { path = "configs/dtos" }

# Networking
axum = { version = "0.8.4", features = ["tokio", "http1", "macros", "tracing"] }
axum-extra = { version = "0.10.1", features = ["query", "typed-header"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal", "sync"] }

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }

# Caching and pubsub
redis = { version = "0.31.0", default-features = false, features = [
    "aio",
    "json",
    "keep-alive",
    "tokio-comp",
    "uuid",
    "connection-manager",
] }

# Authentication
argon2 = { version = "0.5.3", features = ["std"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
serde_json = "1.0.140"
bincode = "2.0.1"
base64 = "0.22.1"

# Logging and error reporting
snafu = "0.8.6"
tracing = "0.1.41"
tracing-futures = { version = "0.2.5", features = ["tokio"] }

utoipa = { version = "5.4.0", features = [
    "axum_extras",
    "chrono",
    "uuid",
    "url",
    "openapi_extensions",
] }
utoipa-axum = "0.2.0"


# Documentation
# Misc utils
uuid = { version = "1.17.0", features = ["serde", "v4"] }
url = { version = "2.5.4", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = { version = "0.3.31", default-features = false }
textwrap-macros = "0.3.0"
derive_more = "2.0.1"
itertools = "0.14.0"
const_format = "0.2.34"
rand = { version = "0.9.1", features = ["serde"] }
rand_xoshiro = { version = "0.7.0", features = ["serde"] }


[workspace.dependencies.reqwest]
version = "0.12.18"
features = ["json"]
# Reqwest uses tls by default, that we do not have 
# inside the containers
default-features = false
