[package]
name = "apelle-common"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
serde.workspace = true
serde_with.workspace = true
clap = { version = "4.5.39", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "parse-value", "toml"] }
atty = "0.2.14"
snafu.workspace = true
tracing-subscriber = { version = "0.3.19", features = [
    "tracing-log",
    "chrono",
] }
tracing.workspace = true
uuid.workspace = true
tracing-appender = "0.2.3"
tokio.workspace = true
axum.workspace = true
tower-http = { version = "0.6.4", features = ["trace", "request-id", "util"] }
dotenvy = "0.15.7"
tracing-futures.workspace = true
sqlx.workspace = true
argon2.workspace = true
futures.workspace = true
redis.workspace = true
chrono.workspace = true
iso8601 = { version = "0.6.3", features = ["chrono", "serde"] }
tower = "0.5.2"
reqwest.workspace = true
itertools = "0.14.0"
