[package]
name = "apelle-configs"
version = "0.1.0"
edition = "2024"

license.workspace = true

[dependencies]
apelle-common.workspace = true
apelle-configs-dtos = { path = "dtos" }

axum.workspace = true
serde.workspace = true
url.workspace = true
snafu.workspace = true
uuid.workspace = true

itertools.workspace = true

sqlx.workspace = true
futures.workspace = true
tracing.workspace = true


textwrap-macros.workspace = true
tokio.workspace = true
