[package]
name = "apelle-songs"
version = "0.1.0"
edition = "2024"

license.workspace = true

[dependencies]
apelle-common.workspace = true
apelle-songs-dtos.workspace = true

axum.workspace = true
serde.workspace = true
url.workspace = true
snafu.workspace = true
sqlx.workspace = true
reqwest.workspace = true
tracing.workspace = true
tokio.workspace = true
redis.workspace = true
futures.workspace = true
const_format = "0.2.34"
