[package]
name = "apelle-songs"
version = "0.1.0"
edition = "2024"

license.workspace = true

[dependencies]
apelle-common.workspace = true
apelle-songs-dtos.workspace = true

axum.workspace = true
serde.workspace = true
url.workspace = true
snafu.workspace = true
sqlx.workspace = true
reqwest = { workspace = true, features = ["stream"] }
tracing.workspace = true
tokio.workspace = true
redis.workspace = true
futures.workspace = true
const_format.workspace = true
textwrap-macros.workspace = true
uuid.workspace = true
chrono.workspace = true
derive_more = { workspace = true, features = ["display"] }
axum-extra.workspace = true
serde_json.workspace = true
crc32fast = "1.4.2"
base64 = "0.22.1"
itertools.workspace = true
urlencoding = "2.1.3"
rand = { version = "0.9.1", features = ["small_rng"] }
