[package]
name = "apelle-songs"
version = "0.1.0"
edition = "2024"

license.workspace = true

[dependencies]
apelle-common.workspace = true
apelle-songs-dtos.workspace = true

axum.workspace = true
serde.workspace = true
url.workspace = true
snafu.workspace = true
sqlx.workspace = true
reqwest.workspace = true
tracing.workspace = true
tokio.workspace = true
redis.workspace = true
futures.workspace = true
const_format.workspace = true
textwrap-macros.workspace = true
uuid.workspace = true
chrono.workspace = true
derive_more.workspace = true
axum-extra.workspace = true
serde_json.workspace = true
itertools.workspace = true
urlencoding = "2.1.3"
rand.workspace = true
bincode.workspace = true
base64.workspace = true
rand_xoshiro.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
