[package]
name = "apelle-users"
version = "0.1.0"
edition = "2024"

license.workspace = true

[dependencies]
apelle-common.workspace = true

axum.workspace = true
serde.workspace = true
url.workspace = true
snafu.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
tracing.workspace = true
argon2.workspace = true
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio.workspace = true
futures.workspace = true
textwrap-macros.workspace = true
