[package]
name = "apelle-users"
version = "0.1.0"
edition = "2024"

license.workspace = true

[dependencies]
apelle-common.workspace = true

axum.workspace = true
serde.workspace = true
url.workspace = true
snafu.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
tracing.workspace = true
argon2.workspace = true
axum-extra.workspace = true
tokio.workspace = true
futures.workspace = true
textwrap-macros.workspace = true
route-recognizer = "0.3.1"
utoipa.workspace = true
utoipa-axum.workspace = true
