[package]
name = "apelle-configs-dtos"
version = "0.1.0"
edition = "2024"

license.workspace = true

[dependencies]
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
strum = { version = "0.27.1", features = ["derive"] }
utoipa.workspace = true
utoipa-axum.workspace = true
either = "1.15.0"
