[package]
name = "apelle-songs-dtos"
version = "0.1.0"
edition = "2024"

[dependencies]
apelle-common.workspace = true

serde.workspace = true
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
url.workspace = true
derive_more = { workspace = true, features = ["unwrap"] }
utoipa.workspace = true
