[package]
name = "apelle-songs-youtube"
version = "0.1.0"
edition = "2024"

license.workspace = true

[dependencies]
apelle-common.workspace = true

axum.workspace = true
serde.workspace = true
url.workspace = true
snafu.workspace = true
reqwest.workspace = true
tracing.workspace = true
futures.workspace = true
