[package]
name = "apelle-songs-youtube"
version = "0.1.0"
edition = "2024"

license.workspace = true

[dependencies]
apelle-common.workspace = true
apelle-songs-dtos.workspace = true

axum.workspace = true
serde.workspace = true
url.workspace = true
snafu.workspace = true
reqwest.workspace = true
tracing.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
sqlx.workspace = true
textwrap-macros.workspace = true
itertools.workspace = true
redis.workspace = true
const_format.workspace = true
rslock = { version = "~0.7.2", default-features = false, features = [
    "tokio-comp",
] }
serde_json.workspace = true
